--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^7.2|^8.0",
         "illuminate/contracts": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
         "illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "graham-campbell/manager": "^4.0",
+        "graham-campbell/manager": "dev-l10-compatibility",
         "vimeo/vimeo-api": "^3.0.3|^3.0"
     },
     "require-dev": {
@@ -58,6 +58,12 @@
             }
         }
     },
+     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/laravel-shift/Laravel-Manager.git"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
